# mac-system-audio-mp3

./: .gitignore  README.md  pyproject.toml
sli_recorder/: __init__.py  cli.py  detect.py  log.py  paths.py  recorder.py  types.py
